# go-vrl

./: .gitignore  Cargo.toml  README.md  build.sh  go.mod  main.go  produce_artifacts.sh  program.go  run.sh  runtime.go  types.go  vrl.h
.cargo/: config
example/: go.mod  main.go
src/: lib.rs
v1/: Cargo.toml
v10/: Cargo.toml  go.mod  vrl.go  vrl_wazero.go  wasminterface.go
v10/example/: go.mod  main.go
v10/src/: lib.rs
v5/: Cargo.toml  go.mod  program.go  runtime.go  types.go  vrl.h
v5/example/: go.mod  main.go
v5/src/: lib.rs
