[package]
name = "vrl-bridge"
version = "0.1.0"
edition = "2021"

[profile.release]
# Emit only the line info tables, not full debug info, in release builds, to
# substantially reduce the size of the debug info. Line info tables are enough
# to symbolicate a backtrace, but not enough to use a debugger interactively.
# This seems to be the right tradeoff for release builds: it's unlikely we're
# going to get interactive access to a debugger in production installations, but
# we still want useful crash reports.
debug = 1

[lib]
name         = "vrl_bridge"
crate-type   = ["cdylib"]

[dependencies]
libc = "0.2"
serde_json = "1.0.87"

# TODO: pin to stable version
value = { git = "https://github.com/vectordotdev/vector", default-features = false }
vrl = { git = "https://github.com/vectordotdev/vector", default-features = false  }
vrl-diagnostic = { git = "https://github.com/vectordotdev/vector", package = "vrl-diagnostic"  }
[dependencies.vrl-stdlib]
package = "vrl-stdlib"
git = "https://github.com/vectordotdev/vector"
