[package]
name = "vrl-bridge"
version = "0.1.0"
edition = "2021"

[profile.release]
# It would be nice to have debug info, at least `debug=1` (line-level granularity)
# But unfortunately it balloons the binary size too much
# With level 0, darwin_arm64 == 57.1
# With level 1, darwin_arm64 == 149Mi
debug = 0

[lib]
name         = "vrl_bridge"
crate-type   = ["staticlib"]

[dependencies]
libc = "0.2"
serde_json = "1.0.87"

# TODO: pin to stable version
value = { git = "https://github.com/vectordotdev/vector", default-features = false }
vrl = { git = "https://github.com/vectordotdev/vector", default-features = false  }
vrl-diagnostic = { git = "https://github.com/vectordotdev/vector", package = "vrl-diagnostic"  }
[dependencies.vrl-stdlib]
package = "vrl-stdlib"
git = "https://github.com/vectordotdev/vector"
